# claude-arena

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
arena/: __init__.py  classifier.py  cli.py  config.py  mcp.py  models.py  oauth.py  orchestrator.py  router.py
docs/: architecture.md
examples/: router-config.json
tests/: test_classifier.py  test_config.py  test_oauth.py  test_orchestrator.py  test_registry.py  test_router.py
